// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bookmarkState renders 0 1`] = `
Array [
  .c0 {
  bookmark-state: 0;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-state: 0;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-state: 0;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-state: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`bookmarkState renders function 1`] = `
Array [
  .c0 {
  bookmark-state: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-state: has;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-state: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-state: has;
}

<div
    className="c0"
  />,
]
`;

exports[`bookmarkState renders invalid theme path 1`] = `
Array [
  .c0 {
  bookmark-state: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-state: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-state: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-state: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`bookmarkState renders negative number 1`] = `
Array [
  .c0 {
  bookmark-state: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-state: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-state: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-state: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`bookmarkState renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  bookmark-state: July;
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-state: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-state: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-state: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    bookmark-state: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  bookmark-state: July;
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-state: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-state: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-state: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    bookmark-state: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  bookmark-state: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    bookmark-state: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-state: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-state: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    bookmark-state: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-state: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    bookmark-state: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-state: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-state: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    bookmark-state: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`bookmarkState renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    bookmark-state: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-state: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-state: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    bookmark-state: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    bookmark-state: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-state: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-state: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    bookmark-state: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    bookmark-state: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-state: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-state: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    bookmark-state: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    bookmark-state: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-state: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-state: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    bookmark-state: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`bookmarkState renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  bookmark-state: July;
}

@media May {
  .c0 {
    bookmark-state: August;
  }
}

@media April {
  .c0 {
    bookmark-state: September;
  }
}

@media January {
  .c0 {
    bookmark-state: November;
  }
}

@media April {
  .c0 {
    bookmark-state: August;
  }
}

@media June {
  .c0 {
    bookmark-state: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  bookmark-state: July;
}

@media May {
  .c0 {
    bookmark-state: August;
  }
}

@media April {
  .c0 {
    bookmark-state: September;
  }
}

@media January {
  .c0 {
    bookmark-state: November;
  }
}

@media April {
  .c0 {
    bookmark-state: August;
  }
}

@media June {
  .c0 {
    bookmark-state: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  bookmark-state: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    bookmark-state: November;
  }
}

@media April {
  .c0 {
    bookmark-state: January;
  }
}

@media January {
  .c0 {
    bookmark-state: December;
  }
}

@media April {
  .c0 {
    bookmark-state: April;
  }
}

@media June {
  .c0 {
    bookmark-state: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-state: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    bookmark-state: November;
  }
}

@media April {
  .c0 {
    bookmark-state: January;
  }
}

@media January {
  .c0 {
    bookmark-state: December;
  }
}

@media April {
  .c0 {
    bookmark-state: April;
  }
}

@media June {
  .c0 {
    bookmark-state: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`bookmarkState renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    bookmark-state: July;
  }
}

@media April {
  .c0 {
    bookmark-state: August;
  }
}

@media January {
  .c0 {
    bookmark-state: September;
  }
}

@media April {
  .c0 {
    bookmark-state: November;
  }
}

@media June {
  .c0 {
    bookmark-state: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    bookmark-state: July;
  }
}

@media April {
  .c0 {
    bookmark-state: August;
  }
}

@media January {
  .c0 {
    bookmark-state: September;
  }
}

@media April {
  .c0 {
    bookmark-state: November;
  }
}

@media June {
  .c0 {
    bookmark-state: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    bookmark-state: January;
  }
}

@media April {
  .c0 {
    bookmark-state: December;
  }
}

@media January {
  .c0 {
    bookmark-state: April;
  }
}

@media April {
  .c0 {
    bookmark-state: May;
  }
}

@media June {
  .c0 {
    bookmark-state: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    bookmark-state: January;
  }
}

@media April {
  .c0 {
    bookmark-state: December;
  }
}

@media January {
  .c0 {
    bookmark-state: April;
  }
}

@media April {
  .c0 {
    bookmark-state: May;
  }
}

@media June {
  .c0 {
    bookmark-state: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`bookmarkState renders postitive number 1`] = `
Array [
  .c0 {
  bookmark-state: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-state: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-state: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-state: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`bookmarkState renders string 1`] = `
Array [
  .c0 {
  bookmark-state: July;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-state: July;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-state: June;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-state: June;
}

<div
    className="c0"
  />,
]
`;

exports[`bookmarkState renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`bookmarkState renders valid theme path 1`] = `
Array [
  .c0 {
  bookmark-state: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-state: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-state: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-state: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
